<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_calculation_label"
            android:textAlignment="center"
            android:textColor="@color/color_primary"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineHeight="21sp"
            android:textAlignment="center"
            android:text="@string/sleep_calulation_description1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_calulation_description2"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/inputTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/fragmenttimePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TimePicker
                android:id="@+id/fragment_timePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:timePickerMode="spinner" />
        </LinearLayout>


        <Button
            android:id="@+id/bed_time_calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:text="@string/bedtime_calculate_button"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
