<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_calculation_label"
            android:textAlignment="center"
            android:textColor="@color/color_primary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/timeResultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/nine_hrs_sleep_time_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/nine_hrs_sleep_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/nine_hours_sleep_label"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/seven_hrs_sleep_time_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/seven_hrs_sleep_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven_hours_sleep_label"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/six_hrs_sleep_time_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/six_hrs_sleep_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six_hours_sleep_label"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/four_hrs_sleep_time_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="100dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/four_hrs_sleep_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_hours_sleep_label"
            android:textSize="18sp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>

</LinearLayout>
