<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/caloriesNeeded_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="50dp"
        android:text="@string/calories_needed_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/calories_needed_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="100dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesNeeded_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/calories_loose_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calories_loose_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/calories_loose_weight_result"
        app:layout_constraintTop_toBottomOf="@+id/calories_needed_result"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/calories_loose_weight_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="100dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calories_gain_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_loose_label" />

    <TextView
        android:id="@+id/calories_gain_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calories_gain_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/calories_gain_weight_result"
        app:layout_constraintTop_toBottomOf="@+id/calories_loose_weight_result"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/calories_gain_weight_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="100dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_gain_label" />


</androidx.constraintlayout.widget.ConstraintLayout>